portfolio/src/main/webapp/style.css
body {
  background-color: #ff9999;
  font: 20px 'Georgia';
}

hr.bar {
  border: 1px solid #000000;
}

.heading {
  text-align: center;
}

.top-navigation a {
  float: left;
  color: #000000;
  text-align: center;
  padding: 5px 0px 15px;
  width: 20%;
}

.top-navigation a:hover {
  color: #f2f2f2;
}

#content,
#servlet-content {
  margin-left: auto;
  margin-right: auto;
  text-align: center;
  width: 650px;
}

#fun-fact-container {
  margin-top: 20px;
}

.main-pic {
  width: 50%;
  height: 50%;
}

table {
  margin-top: 10px;
  text-align: left;
}

.hobby-note {
  margin-top: 10px;
  max-width: 50%;
  float: left;
}

.wics-music-pic {
  float: right;
  margin-right: 100%;
  max-height: 115%;
  max-width: 115%;
}

.mma-pic {
  float: right;
  margin-right: 75%;
  max-height: 50%;
  max-width: 50%;
}

hr.separator {
  overflow: visible;
  padding: 0;
  border: none;
  border-top: medium double #333;
  color: #333;
  text-align: center;
}

hr.separator:after {
  content: '§';
  display: inline-block;
  position: relative;
  top: -0.7em;
  font-size: 1.5em;
  padding: 0 0.25em;
  background: #ff9999;
}

.gallery-note {
  text-align: center;
}

.slideshow-container {
  max-width: 1000px;
  position: relative;
  margin: auto;
  margin-top: 30px;
}

.slides {
  display: none;
}

.slides-image {
  width: 100%;
}

.prev,
.next {
  cursor: pointer;
  position: absolute;
  top: 50%;
  width: auto;
  margin-top: -22px;
  padding: 16px;
  color: #fff;
  font: bold 18px;
  transition: 0.6s ease;
  border-radius: 0 3px 3px 0;
  user-select: none;
}

.next {
  right: 0;
  border-radius: 3px 0 0 3px;
}

.prev:hover,
.next:hover {
  background-color: rgba(0,0,0,0.8);
}

.slides-text {
  color: #000000;  
  padding: 8px 12px;
  position: absolute;
  bottom: -28px;
  width: 100%;
  text-align: center;
}

.number-text {
  color: #f2f2f2;
  font-size: 12px;
  padding: 8px 12px;
  position: absolute;
  top: 0;
}

.dot {
  cursor: pointer;
  height: 15px;
  width: 15px;
  margin: 0 2px;
  background-color: #bbb;
  border-radius: 50%;
  display: inline-block;
  transition: background-color 0.6s ease;
}

.dot-position {
  text-align: center;
}

.dot-active,
.dot:hover {
  background-color: #717171;
}

.fade {
  -webkit-animation-name: fade;
  -webkit-animation-duration: 1.5s;
  animation-name: fade;
  animation-duration: 1.5s;
}

@-webkit-keyframes fade {
  from {opacity: .4}
  to {opacity: 1}
}

@keyframes fade {
  from {opacity: .4}
  to {opacity: 1}
}

.blog-intro {
  text-align: center;
}

.accordion {
  background-color: #eee;
  color: #444;
  cursor: pointer;
  padding: 18px;
  text-align: left;
  outline: none;
  transition: 0.4s;
  border: 1px solid #000000;
  width: 100%;
}

.accordion-left,
.chart-intro {
  margin: 0% 2% 0% 1%;
}

.accordion-both,
.chart-content {
  width: 48%;
  float: left;
}

.panel-active,
.accordion:hover {
  background-color: #ccc;
}

.panel {
  padding: 0 18px;
  background-color: #fff;
  max-height: 0;
  overflow: hidden;
  transition: max-height 0.2s ease-out;
}

.accordion:after {
  content: '\02795';
  font-size: 13px;
  color: #777;
  float: right;
  margin-left: 5px;
}

.panel-active:after {
  content: '\2796';
}

